[package]
name = "wysgy"
version = "0.1.0"
authors = ["Prasanna <srprajagopal@gmail.com>"]
edition = "2018"
description = "A command line graph DB for making higher dimensional notes"
license = "MIT OR Apache-2.0"
keywords = ["notes", "cmdline", "graphdb"]
categories = ["command-line-utilities"]

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
wysgy_core = {path="../wysgy_core", version="0.1.2"}
serde_json = "1.0"
