[package]
name = "wysgy"
version = "0.1.4"
authors = ["Prasanna <srprajagopal@gmail.com>"]
edition = "2018"
description = "A command line graph DB for making higher dimensional notes"
license = "MIT OR Apache-2.0"
keywords = ["notes", "cmdline", "graphdb"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = {version = "2.33", features = ["yaml"]}
wysgy_core = {path="../wysgy_core", version="0.1.4"}
serde_json = "1.0"
cursive = "0.12.0"
glob = "^0.3"
textwrap = "0.11"
gag = "0.1.10"
sublime_fuzzy = "0.6.0"
log4rs = "0.8.3"
log = "0.4.7"
