[package]
name = "wysgy_core"
version = "0.1.2"
authors = ["Prasanna <srprajagopal@gmail.com>"]
edition = "2018"
description = "Core libs for wysgy, a command line graph DB"
license = "MIT OR Apache-2.0"
keywords = ["notes", "cmdline", "graphdb"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0"
prettytable-rs = "^0.8"
glob = "^0.3"
