[package]
name = "wysgy_core"
version = "0.1.4"
authors = ["Prasanna <srprajagopal@gmail.com>"]
edition = "2018"
description = "Core libs for wysgy, a command line graph DB"
license = "MIT OR Apache-2.0"
keywords = ["notes", "cmdline", "graphdb"]
categories = ["command-line-utilities"]

[dependencies]
serde_json = "1.0"
prettytable-rs = "^0.8"
glob = "^0.3"
textwrap = "0.11"
log4rs = "0.8.3"
log = "0.4.7"
